--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ button.sec{background:#777}
 <div class="content">
 
 <!-- OCORRÊNCIAS -->
-<div id="obs" class="module active">
+<div id="obs" class="module">
 <div class="container">
 <h2>SCRIPT OBSERVAÇÕES / OCORRÊNCIAS </h2>
 
@@ -335,7 +335,7 @@ button.sec{background:#777}
 </div>
 
 <!-- BLOQUEIO -->
-<div id="rel" class="module">
+<div id="rel" class="module active">
 <div class="container">
 <h2>SCRIPT BLOQUEIO – LINHA VIVA</h2>
 
