--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ button.sec{background:#777}
 
   <div class="sidebar-header energisa-header">
     <img src="Energisa.svg.png" class="energisa-logo" alt="Energisa">
-    <div class="energisa-sub">Centro Operacional Integrado</div>
+    <div class="energisa-sub">Centro de Operação Integrado</div>
 </div>
 
 
@@ -548,3 +548,4 @@ atualizarRodape();
 
 </body>
 </html>
+
