--- a/index.html
+++ b/index.html
@@ -293,6 +293,15 @@ button.sec{background:#777}
     color:#fff;
 }
 
+.energisa-logo{
+    animation:logoGlow 1.5s ease-in-out infinite;
+}
+
+@keyframes logoGlow{
+    0%{filter:drop-shadow(0 0 4px rgba(0,255,255,0.3))}
+    50%{filter:drop-shadow(0 0 14px rgba(0,255,255,0.7))}
+    100%{filter:drop-shadow(0 0 4px rgba(0,255,255,0.3))}
+}
 
 </style>
 </head>
@@ -548,4 +557,5 @@ atualizarRodape();
 
 </body>
 </html>
+
 
