--- a/index.html
+++ b/index.html
@@ -1181,7 +1181,7 @@ if(d.alerta){
     cor = "amarelo";
   }
 
-  icone = `<span class="alerta ${cor}">${emoji}</span>`;
+icone = `<span class="alerta ${cor}" title="${d.alerta}">${emoji}</span>`;
 }
 
 
@@ -1471,3 +1471,4 @@ ${p.descricao}`;
 
 </body>
 </html>
+
