--- a/index.html
+++ b/index.html
@@ -922,6 +922,7 @@ input:focus, select:focus, textarea:focus{
     <option>ITABAIANA</option>
     <option>LAGARTO</option>
     <option>N. S. DAS DORES</option>
+    <option>N. S. DA GLÓRIA</option>
     <option>PROPRIÁ</option>
     <option>MARUIM</option>
   </select>
@@ -1001,6 +1002,7 @@ input:focus, select:focus, textarea:focus{
     <option>ITABAIANA</option>
     <option>LAGARTO</option>
     <option>N. S. DAS DORES</option>
+    <option>N. S. DA GLÓRIA</option>
     <option>PROPRIÁ</option>
     <option>MARUIM</option>
   </select>
@@ -1585,3 +1587,4 @@ ${p.descricao}`;
 
 </body>
 </html>
+
