--- a/index.html
+++ b/index.html
@@ -127,21 +127,12 @@ body{
 }
 
 .container{
-    background: linear-gradient(
-      180deg,
-      rgba(255,255,255,0.98),
-      rgba(245,248,252,0.95)
-    );
-    border-radius:16px;
-    padding:24px;
+    background:rgba(255,255,255,0.95);
+    border-radius:14px;
+    padding:20px;
     max-width:900px;
     margin:auto;
-    box-shadow:
-      0 8px 25px rgba(0,0,0,0.25),
-      inset 0 0 0 1px rgba(11,83,148,0.08);
-    border-top:4px solid #ff7a00; /* laranja Energisa */
 }
-
 
 h2{
     text-align:center;
@@ -740,7 +731,6 @@ input:focus, select:focus, textarea:focus{
   50%{transform:scale(1.4);opacity:.4}
   100%{transform:scale(1);opacity:1}
 }
-
 /* ===== CALLBACK COMPACTO ===== */
 .callback-linha{
     display:grid;
@@ -775,6 +765,7 @@ input:focus, select:focus, textarea:focus{
 #callback textarea{
     height:70px;
 }
+
 
 </style>
 </head>
@@ -894,29 +885,42 @@ input:focus, select:focus, textarea:focus{
 <div><label>Ramal:</label><input id="ramal"></div>
 </div>
 
-<label>Atuação realizada via:</label>
-<div class="opcoes">
-<input type="radio" name="atuacao" id="celular">
-<label for="celular" class="card">Celular</label>
+<div class="callback-linha">
 
-<input type="radio" name="atuacao" id="ramalRadio">
-<label for="ramalRadio" class="card">Ramal</label>
+  <div class="atuacao-box">
+    <label>Atuação via</label>
+    <div class="opcoes compact">
+      <input type="radio" name="atuacao" id="celular">
+      <label for="celular" class="card">Celular</label>
+
+      <input type="radio" name="atuacao" id="ramalRadio">
+      <label for="ramalRadio" class="card">Ramal</label>
+    </div>
+  </div>
+
+  <div>
+    <label>Cliente Reincidente?</label>
+    <select id="reincidente">
+      <option>Não</option>
+      <option>Sim</option>
+    </select>
+  </div>
+
+  <div>
+    <label>Como foi a ligação?</label>
+    <select id="ligacao">
+      <option>Ligação com sucesso</option>
+      <option>Caixa postal</option>
+      <option>Não chama</option>
+      <option>Telefone incorreto</option>
+      <option>Cliente desligou</option>
+      <option>Telefone não cadastrado</option>
+      <option>Outros</option>
+    </select>
+  </div>
+
 </div>
 
-<div class="linha-2">
-<div><label>Cliente Reincidente?</label><select id="reincidente"><option>Não</option><option>Sim</option></select></div>
-<div><label>Como foi a ligação?</label>
-<select id="ligacao">
-<option>Ligação com sucesso</option>
-<option>Caixa postal</option>
-<option>Não chama</option>
-<option>Telefone incorreto</option>
-<option>Cliente desligou</option>
-<option>Telefone não cadastrado</option>
-<option>Outros</option>
-</select>
-</div>
-</div>
 
 <div class="linha-3">
 <div><label>Situação:</label><select id="situacao"><option>Isolada</option><option>Coletiva</option></select></div>
@@ -934,13 +938,14 @@ input:focus, select:focus, textarea:focus{
 <textarea id="resultadoCallback" readonly></textarea>
 </div>
 </div>
-<!-- EQUIPES DE CAMPO -->
+
 <!-- EQUIPES DE CAMPO -->
 <div id="equipes" class="module equipes-sistema">
 <div class="container">
 
 <div id="moduloEquipes">
   <h2>Controle Diário de Equipes de Campo</h2>
+
 
 <!-- LINHA 1 -->
 <div class="eq-linha1">
@@ -1783,6 +1788,3 @@ function limparSS(){
 
 </body>
 </html>
-
-
-
