--- a/index.html
+++ b/index.html
@@ -127,11 +127,19 @@ body{
 }
 
 .container{
-    background:rgba(255,255,255,0.95);
-    border-radius:14px;
-    padding:20px;
+    background: linear-gradient(
+      180deg,
+      rgba(255,255,255,0.98),
+      rgba(245,248,252,0.95)
+    );
+    border-radius:16px;
+    padding:24px;
     max-width:900px;
     margin:auto;
+    box-shadow:
+      0 8px 25px rgba(0,0,0,0.25),
+      inset 0 0 0 1px rgba(11,83,148,0.08);
+    border-top:4px solid #ff7a00; /* laranja Energisa */
 }
 
 h2{
@@ -1788,3 +1796,4 @@ function limparSS(){
 
 </body>
 </html>
+
